--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-fullstack-node-newhand",
+  "name": "Kartel",
   "version": "1.0.0",
-  "description": "React for beginners",
+  "description": "Front End Example",
   "main": "index.js",
   "scripts": {
     "webpack-watch": "webpack -w",
@@ -10,14 +10,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/siunegu/archaic-monolithic.git"
+    "url": "git+https://bitbucket.org/next-best-alternative/front-end-developer.git"
   },
   "author": "Eugene Lai",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/siunegu/archaic-monolithic/issues"
-  },
-  "homepage": "https://github.com/siunegu/archaic-monolithic#readme",
+  "homepage": "https://bitbucket.org/next-best-alternative/front-end-developer",
   "dependencies": {
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-class-properties": "^6.10.2",
@@ -33,6 +30,18 @@
     "webpack": "^1.13.1"
   },
   "devDependencies": {
-    "concurrently": "^2.1.0"
+    "autoprefixer-loader": "^3.2.0",
+    "concurrently": "^2.1.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
+    "image-loader": "0.0.1",
+    "node-sass": "^3.8.0",
+    "postcss-loader": "^0.9.1",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^4.0.0",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1"
   }
 }
